[package]
name = "deal_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.4.7", features=["derive"]}
prost = "0.12.1"
tokio = { version = "1.33.0", features = ["full"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.8"
