[package]
name = "deal_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.10"
async-trait = "0.1.74"
aws-config = "0.57.1"
clap = {version="4.4.7", features=["derive"]}
iggy = "0.0.113"
inquire = "0.6.2"
prost = "0.12.1"
rusoto = "0.24.2"
rusoto_core = {version="0.47.0", default_features = false, features=["rustls"]}
rusoto_dynamodb = {version="0.47.0", default_features = false, features=["rustls"]}
serde = { version = "1.0.192", features = ["derive"] }
serde_dynamodb = "0.9.0"
tokio = { version = "1.33.0", features = ["full"] }
tonic = "0.10.2"
uuid = { version = "1.5.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.8"
